<resources>
    <string name="app_name">Hero Sales App</string>

    <string name="sign_in_button_text">Sign In</string>
    <string name="dealer_code_text">DEALER CODE</string>
    <string name="dealer_code_hint">*****</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="all_right_reserved">All rights reserved by Hero Moto Corp</string>
    <string name="toll_free"> Toll Free No. - 1800-266-0018</string>
    <string name="compare_text">COMPARE</string>
    <string name="contactus_text">CONTACT US</string>
    <string name="news_text">NEWS</string>
    <string name="vas_text">VALUE ADDED SERVICES</string>
    <string name="faq_text">FAQ</string>
    <string name="reportbug_text">REPORT BUG</string>
    <string name="notify_text">NOTIFICATIONS</string>
    <string name="specification_text">SPECIFICATIONS</string>
    <string name="feature_text">FEATURES</string>
    <string name="gallery_text">GALLERY</string>
    <string name="dimensions">Dimensions</string>
    <string name="electricals">Electricals</string>
    <string name="wheels_tyres"><![CDATA[Wheels & Tyres]]></string>
    <string name="brakes">Brakes</string>
    <string name="suspension">Suspension</string>
    <string name="transmission_chassis"><![CDATA[Transmission & Chassis]]></string>
    <string name="engine">Engine</string>
    <string name="touch_to_compare">TOUCH TO COMPARE</string>
    <string name="feature_compare">COMPARE FEATURES</string>
    <string name="pictures_text">SUPER FEATURES</string>
    <string name="color_text">COLOR</string>
    <string name="tst_text">360</string>
    <string name="color_name">Color Name</string>
    <string name="full_address">Hero Motocorp Ltd., 34, Community Center, Basant Lok, Vasant Vihar, New Delhi - 110057, India</string>
    <string name="company_url">www.heromotocorp.com</string>

    <string name="home_text">ENQUIRY</string>
    <string name="enquiry_text">To see enquiries you need to search for mobile or registration no.</string>
    <string name="numbers">0123456789</string>
    <string name="contactnotfound">No such contact found.You can add new contact and enquiry.</string>
    <string name="addenquiry">ADD NEW ENQUIRY</string>\
    <string name="editenquiry">EDIT NEW ENQUIRY</string>
    <string name="searchfilter">SEARCH FILTER</string>
    <string name="warranty">WARRANTY DETAILS</string>
    <string name="maintenance">MAINTENANCE SCHEDULE</string>
    <string name="safetytips">SAFETY $ BIKE TIPS</string>
    <string name="genuineparts">GENUINE PARTS</string>
    <string name="testquestion1">How would you rate the vehicle in terms of styling?</string>
    <string name="testquestion2">What do you think about the riding performance of the vehicle?</string>
    <string name="testquestion3">Are you happy with the features provided with the vehicle?</string>
    <string name="testquestion4">When are you planning to buy the vehcile?</string>
    <string name="testquestion5">Will you refer this vehicle to your friends and relatives?</string>
    <string name="testquestion6">Do you have any other comments that you would like to share with us?</string>
    <string name="testquestion7">Overall Rating</string>
    <string name="maintainschedule">Hero MotoCorp Ltd.(hereinafter called \'Hero MotoCorp\') warrants its motorcycles and scooters
    (hereinafter called \'Vehicles\') assembled/manufactures in its Plants and sold through its authorized dealers, to be free from any
    defect- both in material and workmanship, under normal use and conditions, subject to the following terms and conditions.</string>

    <string name="title_activity_splash">activity_splash</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="btn1_text">&lt; 25</string>
    <string name="btn2_text">25 - 30</string>
    <string name="btn3_text">31 - 35</string>
    <string name="btn4_text">36 - 40</string>
    <string name="btn5_text">41 - 45</string>
    <string name="btn6_text">&gt; 45</string>
</resources>
