<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/contactus_bg"
    tools:context=".ui.activities.contact_us.ContactUsFragmrnt">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/hero_logo" />

    <ImageView
        android:id="@+id/menu_icon"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_menu_white" />

    <LinearLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_logo"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/pllgm_button_bg"
            android:gravity="center_vertical"
            android:text="@string/contactus_text" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ffffff" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/detail_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/seprator"
        android:layout_below="@+id/top_layout"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:background="@drawable/box">

        <TextView
            android:id="@+id/web_url_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/company_url"
            android:textColor="@color/color_red" />

        <TextView
            android:id="@+id/full_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/full_address"
            android:textColor="#ffffff" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/toll_free"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Toll free no."
                android:textColor="#ffffff" />
            <TextView
                android:id="@+id/toll_free2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="- 1800 266 0018"
                android:textColor="@color/color_red" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/seprator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/copy_right_layout"
        android:background="#ffffff" />

    <LinearLayout
        android:id="@+id/copy_right_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/copy_right_text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/all_right_reserved"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/copy_right_text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/toll_free"
            android:textColor="#ffffff" />
    </LinearLayout>
</RelativeLayout>
