<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_signin">

    <ImageView
        android:id="@+id/bike_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:src="@drawable/bikes" />

    <LinearLayout
        android:id="@+id/container_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:background="#80000000"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/logo_image_view"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/hero_logo" />

        <ImageView
            android:id="@+id/dealer_image_view"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/man_icon" />

        <TextView
            android:id="@+id/dealer_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/dealer_code_text"
            android:textColor="#ffffff" />

        <EditText
            android:id="@+id/dealer_code_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#55000000"
            android:ems="10"
            android:hint="@string/dealer_code_hint"
            android:inputType="textPassword"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff" />

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#d40400"
            android:text="@string/sign_in_button_text"
            android:textAllCaps="false"
            android:textColor="#ffffff" />

    </LinearLayout>

    <com.github.ybq.android.spinkit.SpinKitView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/progress"
        style="@style/SpinKitView.Wave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:visibility="gone"
        app:SpinKit_Color="#cc0000"

        />
</RelativeLayout>
