<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content_compare"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/feature_bg">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/hero_logo" />

    <ImageView
        android:id="@+id/menu_icon"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_menu_white" />

    <LinearLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_logo"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/pllgm_button_bg"
            android:gravity="center_vertical"
            android:text="@string/compare_text" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ffffff" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/comparison_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_layout"
        android:layout_below="@+id/top_layout"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/default_bike_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/default_bike_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/default_bike_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="default bike" />
        </LinearLayout>

        <TextView
            android:id="@+id/separator"
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="#ffffff" />

        <LinearLayout
            android:id="@+id/bike_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/other_bike_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/bike_place_holder" />

            <Spinner
                android:id="@+id/bike_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/square_bg" />
        </LinearLayout>

        <TextView
            android:id="@+id/separator1"
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="#ffffff" />

        <LinearLayout
            android:id="@+id/continue_button_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="bottom"
            android:orientation="vertical">

            <Button
                android:id="@+id/comparefeature_button"
                android:layout_width="wrap_content"
                android:layout_height="0sp"
                android:layout_weight="0.1"
                android:background="@color/color_red"
                android:text="@string/feature_compare"
                android:visibility="gone"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0sp"
                android:layout_weight="0.4"></LinearLayout>

            <Button
                android:id="@+id/continue_button"
                android:layout_width="wrap_content"
                android:layout_height="0sp"
                android:layout_weight="0.1"
                android:background="@color/color_red"
                android:text="@string/touch_to_compare" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center">

        <Button
            android:id="@+id/gallery"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:background="@drawable/parllgm_button_unselected"
            android:gravity="center_vertical"
            android:text="@string/gallery_text"
            android:textColor="#717171" />

        <Button
            android:id="@+id/features"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:background="@drawable/parllgm_button_unselected"
            android:gravity="center_vertical"
            android:text="@string/feature_text"
            android:textColor="#717171" />

        <Button
            android:id="@+id/specs"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:background="@drawable/parllgm_button_unselected"
            android:gravity="center_vertical"
            android:text="@string/specification_text"
            android:textColor="#717171" />

        <Button
            android:id="@+id/compare"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:background="@drawable/pllgm_button_bg"
            android:gravity="center_vertical"
            android:text="@string/compare_text"
            android:textColor="#ffffff" />
    </LinearLayout>

    <!--<TextView
        android:id="@+id/seprator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/copy_right_layout"
        android:background="#ffffff" />

    <LinearLayout
        android:id="@+id/copy_right_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:id="@+id/copy_right_text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/all_right_reserved"
            android:textColor="#ffffff" />
        <TextView
            android:id="@+id/copy_right_text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/toll_free"
            android:textColor="#ffffff" />
    </LinearLayout>-->

</RelativeLayout>